-Cleaning up some messages and compile warnings.
-Adding new rootcheck sigs for outdated CMSs (Wordpress, Joomla and Drupal)

-Added basic detection for darkleech/cdork and common CMS backdoors.

-Clean up code to allow rootcheck to be run separately.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,10 @@ internal use, but it is open for anyone to get as well.
 
 Changes at the dev version
    * Feature: Added a default temp (shared) password for os_authd
+   * Feature: Added detection of outdated CMSs on rootcheck: WordPress,
+     Joomla & Drupal.
+   * Feature: Added signatures to detect Darkleech, Cdorked and some common
+     web backdoors.
 
 Changes with 2016-02
    * Feature: Added different_geoip and different_srcip rule types.
