--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,10 @@ internal use, but it is open for anyone to get as well.
 More details: https://dcid.me/ossec
 
 
+Changes on Development branch
+   * Bug fix: Missing option on agent-auth help message and authentication.
+
+
 Changes with 2016-04
    * Feature: Added a default temp (shared) password for os_authd
    * Feature: Added detection of outdated CMSs on rootcheck: WordPress,
